bee-common-derive/tests/packable/fail/invalid_id_enum.stderr
error: All variants of an enum that derives `Packable` require a `#[packable(id = ...)]` attribute.
  --> $DIR/invalid_id_enum.rs:13:5
   |
13 |     None,
   |     ^^^^
